--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     
     <section id="home" class="container text-center mt-5">
         <div class="hero">
-            <img src="images/phone-selling.jpg" alt="Used Mobile Phones for Sale" class="img-fluid rounded shadow-lg">
+            <img src="https://i.gadgets360cdn.com/large/iphone_in_store_purchase_image_apple_1627478772369.jpg" alt="Used Mobile Phones for Sale" class="img-fluid rounded shadow-lg">
         </div>
         <h2 class="mt-4">Welcome to Ezy Buy Sell Store</h2>
         <p class="lead">We provide high-quality used mobile phones at affordable prices across Odisha. Get the best deals today!</p>
