--- a/refund-policy.html
+++ b/refund-policy.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Refund Policy</title>
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -29,6 +33,28 @@
     </style>
 </head>
 <body>
+
+        <header class="bg-dark text-white text-center py-3">
+        <h1>Ezy Buy Sell Store</h1>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li
+                        <li class="nav-item"><a class="nav-link" href="privacy-policy.html">Privacy Policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="term-and-condition.html">Term & Condition</a></li>
+                        <li class="nav-item"><a class="nav-link" href="refund-policy.html">Refund Policy</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
     <div class="container">
         <h1>No Refund Policy</h1>
         <p><strong>Effective Date:</strong> February 12, 2025</p>
