--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li
+                        <li class="nav-item"><a class="nav-link" href="privacy-policy.html">Privacy Policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="term-and-condition.html">Term & Condition</a></li>
+                        <li class="nav-item"><a class="nav-link" href="refund-policy.html">Refund Policy</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     
     <section id="home" class="container text-center mt-5">
         <div class="hero">
