--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="bg-dark text-white text-center py-3">
+      <header class="bg-dark text-white text-center py-3">
         <h1>Ezy Buy Sell Store</h1>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
@@ -21,12 +21,16 @@
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="about.html">About Us</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li
+                        <li class="nav-item"><a class="nav-link" href="privacy-policy.html">Privacy Policy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="term-and-condition.html">Term & Condition</a></li>
+                        <li class="nav-item"><a class="nav-link" href="refund-policy.html">Refund Policy</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+
     
     <section id="contact" class="container text-center mt-5">
         <h2>Contact Us</h2>
