--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,7 +3,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
  <style>
-        body {
+       .cont {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
@@ -14,7 +14,7 @@
 
 
 
-
+<div class="cont">
     <header class="bg-dark text-white text-center py-3">
         <h1>Ezy Buy Sell Store</h1>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -209,3 +209,5 @@
 <ul>
 <li>By visiting this page on our website: <a href="https://ezybuysellstore.com/contact" rel="external nofollow noopener" target="_blank">https://ezybuysellstore.com/contact</a></li>
 </ul>
+
+    </div>
