--- a/refund-policy.html
+++ b/refund-policy.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <style>
-        body {
+       .cont {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-
+<div class="cont">
         <header class="bg-dark text-white text-center py-3">
         <h1>Ezy Buy Sell Store</h1>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -59,6 +59,7 @@
         <p><strong>Phone:</strong> 7978631238, 9078631238</p>
         
         <p>By completing your purchase, you acknowledge and agree to this <strong>No Refund Policy</strong>.</p>
+    </div>
     </div>
 </body>
 </html>
