--- a/term-and-condition.html
+++ b/term-and-condition.html
@@ -2,8 +2,8 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="styles.css">
- <style>
-        body {
+  <style>
+       .cont {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 20px;
@@ -11,7 +11,7 @@
         }
      
     </style>
-
+<div class="cont">
 <header class="bg-dark text-white text-center py-3">
         <h1>Ezy Buy Sell Store</h1>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -116,3 +116,4 @@ You agree that the original English text shall prevail in the case of a dispute.
 <ul>
 <li>By visiting this page on our website: <a href="https://ezybuysellstore.com/contact" rel="external nofollow noopener" target="_blank">https://ezybuysellstore.com/contact</a></li>
 </ul>
+</div>
